Support for forced fullscreen mode